--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "node-sass": "^4.7.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.0",
     "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2"
   },
