--- a/package.json
+++ b/package.json
@@ -23,22 +23,27 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/email-composer": "^4.7.0",
     "@ionic-native/local-notifications": "^4.7.0",
+    "@ionic-native/social-sharing": "^4.7.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email": "^1.2.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.3.2",
     "de.appplant.cordova.plugin.local-notification": "^0.8.5",
+    "es6-promise-plugin": "^4.2.2",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "node-sass": "^4.7.2",
+    "platform": "1.3.5",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -57,10 +62,12 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "de.appplant.cordova.plugin.local-notification": {},
-      "cordova-plugin-email": {}
+      "cordova-plugin-email": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
